force-app/main/default/objects/STAR_Rating_History__c/STAR_Rating_History__c.object-meta.xml
<CustomObject>
    <label>STAR Rating History</label>
    <nameField>
        <displayFormat>STAR-{000000}</displayFormat>
        <label>STAR Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>STAR Rating History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>