force-app/main/default/objects/STAR_Rating_History__c/fields/Algorithm_Version__c.field-meta.xml
<CustomField>
    <fullName>Algorithm_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Algorithm Version</label>
    <referenceTo>ExpressionSetVersion</referenceTo>
    <relationshipLabel>STAR Rating History</relationshipLabel>
    <relationshipName>STAR_Rating_History</relationshipName>
    <type>Lookup</type>
</CustomField>