force-app/main/default/objects/STAR_Rating_History__c/fields/CalculationReady__c.field-meta.xml
<CustomField>
    <fullName>CalculationReady__c</fullName>
    <formula>IF(  ISPICKVAL(Status__c, &apos;Draft&apos;), 
IF( ISNULL(Care_Minutes_Id__r.Care_Minutes_Rating__c) = false, 
IF(ISNULL(Service_Compliance_Id__r.Service_Compliance_Rating__c) = false,
IF(ISNULL(Quality_Indicator_Id__r.Quality_Indicator_Rating__c) = false,
IF(ISNULL(Consumer_Experience_Id__r.Consumer_Experience_Rating__c) = false, true, false) , false) , false) , false) , false)</formula>
    <label>CalculationReady</label>
    <type>Checkbox</type>
</CustomField>