force-app/main/default/objects/STAR_Rating_History__c/fields/Care_Minutes_Description__c.field-meta.xml
<CustomField>
    <fullName>Care_Minutes_Description__c</fullName>
    <formula>Care_Minutes_Id__r.Care_Minutes_Rating_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Minutes Description</label>
    <type>Text</type>
</CustomField>