force-app/main/default/objects/STAR_Rating_History__c/fields/Care_Minutes_Id__c.field-meta.xml
<CustomField>
    <fullName>Care_Minutes_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Minutes</label>
    <referenceTo>Care_Minutes_Summary__c</referenceTo>
    <relationshipLabel>STAR Rating History</relationshipLabel>
    <relationshipName>STAR_Rating_History</relationshipName>
    <type>Lookup</type>
</CustomField>