force-app/main/default/objects/STAR_Rating_History__c/fields/CER_Rating_Description__c.field-meta.xml
<CustomField>
    <fullName>CER_Rating_Description__c</fullName>
    <formula>Consumer_Experience_Id__r.Total_CER_Rating_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CER Rating Description</label>
    <type>Text</type>
</CustomField>