force-app/main/default/objects/STAR_Rating_History__c/fields/Consumer_Experience_Id__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Experience_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer Experience Report</label>
    <referenceTo>SRQI_CER__c</referenceTo>
    <relationshipLabel>STAR Rating History</relationshipLabel>
    <relationshipName>STAR_Rating_History</relationshipName>
    <type>Lookup</type>
</CustomField>