force-app/main/default/objects/STAR_Rating_History__c/fields/Consumer_Experience_Rating__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Experience_Rating__c</fullName>
    <description>Gets Consumer Experience Rating and shows star rating</description>
    <formula>IMAGE(
IF( Consumer_Experience_Id__r.Consumer_Experience_Rating__c = 5, &quot;/img/samples/stars_500.gif&quot;,
IF( Consumer_Experience_Id__r.Consumer_Experience_Rating__c = 4, &quot;/img/samples/stars_400.gif&quot;,
IF( Consumer_Experience_Id__r.Consumer_Experience_Rating__c = 3, &quot;/img/samples/stars_300.gif&quot;,
IF( Consumer_Experience_Id__r.Consumer_Experience_Rating__c = 2, &quot;/img/samples/stars_200.gif&quot;,
IF( Consumer_Experience_Id__r.Consumer_Experience_Rating__c = 1, &quot;/img/samples/stars_100.gif&quot;,
IF( ISBLANK(Consumer_Experience_Id__r.Consumer_Experience_Rating__c), &quot;/img/samples/stars_000.gif&quot;,
&quot;No rating available&quot;
)
)
)
)
)
), &quot;&quot;)</formula>
    <label>Consumer Experience Rating</label>
    <type>Text</type>
</CustomField>