force-app/main/default/objects/STAR_Rating_History__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description (OLD)</label>
    <type>TextArea</type>
</CustomField>