force-app/main/default/objects/STAR_Rating_History__c/fields/Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date__c</fullName>
    <description>Date STAR Rating is live on MAC</description>
    <label>Go-Live Date</label>
    <type>Date</type>
</CustomField>