force-app/main/default/objects/STAR_Rating_History__c/fields/New_Service__c.field-meta.xml
<CustomField>
    <fullName>New_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if service is new</description>
    <label>New Service</label>
    <type>Checkbox</type>
</CustomField>