force-app/main/default/objects/STAR_Rating_History__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <formula>IF( ISPICKVAL(Status__c, &apos;Removed&apos;) , &apos;Ratings have been removed&apos;,
IF(Under_Review__c = true, &apos;Rating is Under Review&apos;,
IF(ISNULL(STAR_Rating_Calculation__c), &apos;No rating available&apos;,
TEXT(STAR_Rating_Calculation__c) ) ) )</formula>
    <label>Override Reason</label>
    <type>Text</type>
</CustomField>