force-app/main/default/objects/STAR_Rating_History__c/fields/Provider_Portal_Status__c.field-meta.xml
<CustomField>
    <fullName>Provider_Portal_Status__c</fullName>
    <formula>IF(
    AND(ISPICKVAL(Status__c, &quot;LIVE&quot;), NOT(Under_Review__c)),
    &quot;Publicly available&quot;,
    IF(
        AND(ISPICKVAL(Status__c, &quot;Published&quot;), NOT(Under_Review__c)),
        &quot;Preview&quot;,
        IF(
            OR(ISPICKVAL(Status__c, &quot;Published&quot;), ISPICKVAL(Status__c, &quot;LIVE&quot;)),
            &quot;Under review&quot;,
            &quot;&quot;
        )
    )
)</formula>
    <label>Provider Portal Status</label>
    <type>Text</type>
</CustomField>