force-app/main/default/objects/STAR_Rating_History__c/fields/ProviderPortal_RatingType__c.field-meta.xml
<CustomField>
    <fullName>ProviderPortal_RatingType__c</fullName>
    <formula>CASE(
    TEXT(Rating_Type__c),
    &quot;Current Rating&quot;, &quot;Current&quot;,
    &quot;New Rating&quot;, &quot;New&quot;,
    &quot;Previous Rating&quot;, &quot;Previous&quot;,
    &quot;Draft Rating&quot;, &quot;Draft&quot;,
    LEFT(TEXT(Rating_Type__c), FIND(&quot; &quot;, TEXT(Rating_Type__c)) - 1)
)</formula>
    <label>ProviderPortal RatingType</label>
    <type>Text</type>
</CustomField>