force-app/main/default/objects/STAR_Rating_History__c/fields/Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Publish_Date__c</fullName>
    <description>Date STAR rating is to be published to the provider portal</description>
    <label>Publish Date</label>
    <type>Date</type>
</CustomField>