force-app/main/default/objects/STAR_Rating_History__c/fields/Quality_Indicator_Description__c.field-meta.xml
<CustomField>
    <fullName>Quality_Indicator_Description__c</fullName>
    <formula>Quality_Indicator_Id__r.QI_Rating_Label__c</formula>
    <label>Quality Indicator Description</label>
    <type>Text</type>
</CustomField>