force-app/main/default/objects/STAR_Rating_History__c/fields/Quality_Indicator_Id__c.field-meta.xml
<CustomField>
    <fullName>Quality_Indicator_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Indicator</label>
    <referenceTo>Quality_Indicator_Summary__c</referenceTo>
    <relationshipLabel>STAR Rating History</relationshipLabel>
    <relationshipName>STAR_Rating_History</relationshipName>
    <type>Lookup</type>
</CustomField>