force-app/main/default/objects/STAR_Rating_History__c/fields/Quality_Indicator_Rating__c.field-meta.xml
<CustomField>
    <fullName>Quality_Indicator_Rating__c</fullName>
    <description>Gets Quality Indicator Rating and shows star rating</description>
    <formula>Quality_Indicator_Id__r.Quality_Indicator_Rating_Stars__c</formula>
    <label>Quality Indicator Rating</label>
    <type>Text</type>
</CustomField>