force-app/main/default/objects/STAR_Rating_History__c/fields/Rating_Calc_Date__c.field-meta.xml
<CustomField>
    <fullName>Rating_Calc_Date__c</fullName>
    <description>DateTime STAR Rating was calculated</description>
    <label>Calculation Date</label>
    <type>DateTime</type>
</CustomField>