force-app/main/default/objects/STAR_Rating_History__c/fields/Reason_for_hold__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_hold__c</fullName>
    <description>A long text area to capture the reason for holding a star rating</description>
    <label>Reason for hold</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>