force-app/main/default/objects/STAR_Rating_History__c/fields/Reason_for_release__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_release__c</fullName>
    <description>A long text area to capture the reason for releasing a star rating from hold</description>
    <label>Reason for release</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>