force-app/main/default/objects/STAR_Rating_History__c/fields/Recalculate_on_Save__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_on_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows a user to trigger a recalculation of the overall rating only</description>
    <inlineHelpText>To trigger a recalculation of the overall rating only select this checkbox and save the record</inlineHelpText>
    <label>Recalculate on Save</label>
    <type>Checkbox</type>
</CustomField>