force-app/main/default/objects/STAR_Rating_History__c/fields/Remove_Current_Rating__c.field-meta.xml
<CustomField>
    <fullName>Remove_Current_Rating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Current Rating</label>
    <type>Checkbox</type>
</CustomField>