force-app/main/default/objects/STAR_Rating_History__c/fields/Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Period</label>
    <referenceTo>Reporting_Period__c</referenceTo>
    <relationshipLabel>STAR Rating History</relationshipLabel>
    <relationshipName>STAR_Rating_History</relationshipName>
    <type>Lookup</type>
</CustomField>