force-app/main/default/objects/STAR_Rating_History__c/fields/SCR1or2__c.field-meta.xml
<CustomField>
    <fullName>SCR1or2__c</fullName>
    <formula>If(Service_Compliance_Id__r.Service_Compliance_Rating__c = 2, true,
If(Service_Compliance_Id__r.Service_Compliance_Rating__c = 1, true, false))</formula>
    <label>SCR1or2</label>
    <type>Checkbox</type>
</CustomField>