force-app/main/default/objects/STAR_Rating_History__c/fields/Service_Account_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Account</label>
    <referenceTo>Service_Account_Relationship__c</referenceTo>
    <relationshipLabel>STAR Rating History</relationshipLabel>
    <relationshipName>STAR_Rating_History</relationshipName>
    <type>Lookup</type>
</CustomField>