force-app/main/default/objects/STAR_Rating_History__c/fields/Service_Compliance_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Compliance_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Compliance</label>
    <referenceTo>Service_Compliance_History__c</referenceTo>
    <relationshipLabel>STAR Rating History</relationshipLabel>
    <relationshipName>STAR_Rating_History</relationshipName>
    <type>Lookup</type>
</CustomField>