force-app/main/default/objects/STAR_Rating_History__c/fields/Service_Compliance_Rating_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Compliance_Rating_Description__c</fullName>
    <formula>Service_Compliance_Id__r.SCR_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Compliance Rating Description</label>
    <type>Text</type>
</CustomField>