force-app/main/default/objects/STAR_Rating_History__c/fields/Service_NAPS_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_NAPS_Id__c</fullName>
    <formula>SF_Service_Id__r.Integration_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service NAPS Id</label>
    <type>Text</type>
</CustomField>