force-app/main/default/objects/STAR_Rating_History__c/fields/SF_Service_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_Service_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>STAR Rating History</relationshipLabel>
    <relationshipName>STAR_Rating_History</relationshipName>
    <type>Lookup</type>
</CustomField>