force-app/main/default/objects/STAR_Rating_History__c/fields/SRH_Rating_Label__c.field-meta.xml
<CustomField>
    <fullName>SRH_Rating_Label__c</fullName>
    <formula>IF(STAR_Rating_Calculation__c = 0 &amp;&amp; Rating_Exemption_Granted__c = true, &quot;No rating available&quot;,
IF(STAR_Rating_Calculation__c = 1, &quot;Significant Improvement Needed&quot;,
IF(STAR_Rating_Calculation__c = 2, &quot;Improvement Needed&quot;,
IF(STAR_Rating_Calculation__c = 3, &quot;Acceptable&quot;,
IF(STAR_Rating_Calculation__c = 4, &quot;Good&quot;,
IF(STAR_Rating_Calculation__c = 5, &quot;Excellent&quot;,
&quot;No rating available&quot;
))))))</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>