force-app/main/default/objects/STAR_Rating_History__c/fields/STAR_Rating__c.field-meta.xml
<CustomField>
    <fullName>STAR_Rating__c</fullName>
    <formula>IMAGE(
IF( STAR_Rating_Calculation__c = 5, &quot;/img/samples/stars_500.gif&quot;,
IF( STAR_Rating_Calculation__c = 4, &quot;/img/samples/stars_400.gif&quot;,
IF( STAR_Rating_Calculation__c = 3, &quot;/img/samples/stars_300.gif&quot;,
IF( STAR_Rating_Calculation__c = 2, &quot;/img/samples/stars_200.gif&quot;,
IF( STAR_Rating_Calculation__c = 1, &quot;/img/samples/stars_100.gif&quot;, 
IF( ISBLANK(STAR_Rating_Calculation__c), &quot;/img/samples/stars_000.gif&quot;, &quot;/img/samples/stars_000.gif&quot;
)
)
)
)
)
), &quot;No rating available&quot;
)</formula>
    <label>STAR Rating</label>
    <type>Text</type>
</CustomField>