force-app/main/default/objects/STAR_Rating_History__c/fields/STAR_Rating_Calculation__c.field-meta.xml
<CustomField>
    <fullName>STAR_Rating_Calculation__c</fullName>
    <label>STAR Rating Calculation</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>