force-app/main/default/objects/STAR_Rating_History__c/fields/Star_Rating_Previous_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating_Previous_Quarter__c</fullName>
    <formula>Reporting_Period__r.Previous_Reporting_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Star Rating Previous Quarter</label>
    <type>Checkbox</type>
</CustomField>