force-app/main/default/objects/STAR_Rating_History__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of Star Rating calculation</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Availability_Status</valueSetName>
    </valueSet>
</CustomField>