force-app/main/default/objects/STAR_Rating_History__c/fields/Transferred__c.field-meta.xml
<CustomField>
    <fullName>Transferred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field updated when a Service Acct relationship is end dated</description>
    <label>Transferred</label>
    <type>Checkbox</type>
</CustomField>