force-app/main/default/objects/STAR_Rating_History__c/fields/Under_Review__c.field-meta.xml
<CustomField>
    <fullName>Under_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Review</label>
    <type>Checkbox</type>
</CustomField>