force-app/main/default/objects/STAR_Rating_History__c/recordTypes/Care_Minutes_Rating.recordType-meta.xml
<RecordType>
    <fullName>Care_Minutes_Rating</fullName>
    <active>false</active>
    <description>Algorithm Data pertaining to CM Rating calculation</description>
    <label>Care Minutes Rating</label>
</RecordType>