force-app/main/default/objects/STAR_Rating_History__c/recordTypes/Quality_Indicator_Rating.recordType-meta.xml
<RecordType>
    <fullName>Quality_Indicator_Rating</fullName>
    <active>false</active>
    <description>Algorithm Data pertaining to QI Rating calculation</description>
    <label>Quality Indicator Rating</label>
</RecordType>