force-app/main/default/objects/STAR_Rating_History__c/recordTypes/Service_Compliance_Rating.recordType-meta.xml
<RecordType>
    <fullName>Service_Compliance_Rating</fullName>
    <active>false</active>
    <description>Algorithm Data pertaining to SCR Rating calculation</description>
    <label>Service Compliance Rating</label>
</RecordType>