force-app/main/default/objects/STAR_Rating_History__c/recordTypes/Star_Rating.recordType-meta.xml
<RecordType>
    <fullName>Star_Rating</fullName>
    <active>false</active>
    <description>Algorithm Data pertaining to overall Star Rating calculation</description>
    <label>Star Rating</label>
</RecordType>