force-app/main/default/objects/STAR_Rating_History__c/recordTypes/STAR_Rating_History.recordType-meta.xml
<RecordType>
    <fullName>STAR_Rating_History</fullName>
    <active>true</active>
    <label>STAR Rating History</label>
</RecordType>