force-app/main/default/objects/STAR_Rating_History__c/validationRules/ReasonForRelease_Min10.validationRule-meta.xml
<ValidationRule>
    <fullName>ReasonForRelease_Min10</fullName>
    <active>false</active>
    <description>If reason for release field contains less than 10 characters, then error</description>
    <errorConditionFormula>AND( ISCHANGED(Under_Review__c ), NOT(ISNULL( Reason_for_hold__c )),LEN(  Reason_for_release__c )&lt;10)</errorConditionFormula>
    <errorDisplayField>Reason_for_release__c</errorDisplayField>
    <errorMessage>Reason for release cannot be less than 10 characters</errorMessage>
</ValidationRule>