force-app/main/default/objects/STAR_Rating_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>STAR_Rating__c</columns>
    <columns>Rating_Calc_Date__c</columns>
    <columns>Go_Live_Date__c</columns>
    <columns>Publish_Date__c</columns>
    <columns>Transferred__c</columns>
    <columns>Under_Review__c</columns>
    <columns>Status__c</columns>
    <columns>Rating_Type__c</columns>
    <columns>Rating_Exemption_Granted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>