force-app/main/default/objects/STAR_Rating_History__c/listViews/Previous_Quarter_Star_Rating.listView-meta.xml
<ListView>
    <fullName>Previous_Quarter_Star_Rating</fullName>
    <columns>NAME</columns>
    <columns>STAR_Rating__c</columns>
    <columns>Rating_Calc_Date__c</columns>
    <columns>Go_Live_Date__c</columns>
    <columns>Publish_Date__c</columns>
    <columns>Transferred__c</columns>
    <columns>Under_Review__c</columns>
    <columns>Status__c</columns>
    <columns>Rating_Type__c</columns>
    <columns>Rating_Exemption_Granted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Star_Rating_Previous_Quarter__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Previous Quarter - Star Rating</label>
</ListView>